@@ -1,3 +1,8 @@
+2005-11-16  Christian Stimming <stimming@tuhh.de>
+
+	* src/lib/methods.cc: Methods B9 and C0 added by Alexander Kurz
+	<akurz@blala.de>
+
 2005-11-07  Christian Stimming <stimming@tuhh.de>
 
 	* configure.in: Release version 1.8
